--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,70 @@
+# Web框架
 Flask==2.3.3
-PyJWT==2.8.0
-requests==2.31.0
+Flask-SocketIO==5.3.6
+Flask-CORS==4.0.0
+Flask-JWT-Extended==4.5.2
+Flask-Limiter==3.5.0
+Flask-Session==0.5.0
+Werkzeug==2.3.7
+
+# Socket.IO
+python-socketio==5.9.0
+# 修改：去掉版本限制，确保兼容 Python 3.12
+eventlet
+
+# 数据库
 SQLAlchemy==2.0.30
+Flask-SQLAlchemy==3.0.5
+alembic==1.12.0
+# 修改：去掉版本限制，解决安装报错
+psycopg2-binary
 PyMySQL==1.1.0
-cryptography==42.0.8
+
+# 缓存和会话
+redis==5.0.0
+
+# 安全
+PyJWT==2.8.0
+bcrypt==4.0.1
+cryptography==41.0.4
+passlib==1.7.4
+
+# 文件处理
+Pillow==10.0.1
+# 修改：Windows下建议使用带二进制库的版本，否则运行时会报错
+python-magic-bin==0.4.14
+boto3==1.28.57
+azure-storage-blob==12.19.0
+google-cloud-storage==2.10.0
+
+# 数据验证和序列化
+marshmallow==3.20.1
+jsonschema==4.19.0
+email-validator==2.0.0
+
+# 日志和监控
+structlog==23.1.0
+prometheus-client==0.17.1
+psutil==5.9.8
+
+# 测试
+pytest==7.4.2
+pytest-flask==1.2.0
+pytest-cov==4.1.0
+factory-boy==3.3.0
+faker==19.6.2
+
+# 开发工具
+black==23.9.1
+flake8==6.1.0
+isort==5.12.0
+mypy==1.5.1
+
+# 其他工具
+python-dotenv==1.0.0
+click==8.1.7
+requests==2.31.0
+urllib3==2.0.5
+certifi==2023.7.22
+idna==3.4
+chardet==5.2.0
